--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!-- Write your HTML in this file -->
-<doctype HTML>
-  <HTML>
-    <head>
-      This is a title.
-    </head>
-    <body>
-      <p>
-        This is a body paragraph.
-      </p>
-    </body>
-  </HTML>
-</doctype>
+<!doctype HTML>
+<HTML>
+  <head>
+    This is a title.
+  </head>
+  <body>
+    <p>
+      This is a body paragraph.
+    </p>
+  </body>
+</HTML>
