Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-- Write your HTML in this file -->
 <!doctype HTML>
-<HTML>
+<html>
   <head>
     This is a title.
   </head>
@@ -9,4 +9,4 @@
       This is a body paragraph.
     </p>
   </body>
-</HTML>
+</html>
